--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="./resouces/css/style.css" type="text/css" rel="stylesheet"/>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
     <title></title>
   </head>
   <body>
-    <h1>Excursion</h1>
+    <h1>Discover hidden places in the world around you</h1>
+      <p><a href="index.html">Download Excursion (Coming soon!)</a></p>
+
   </body>
 </html>
