--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-      <p><a href="index.html">Download Excursion (Coming soon!)</a></p>
-
+      <p class="download_link"><a href="index.html">Download Excursion (Coming soon!)</a></p>
+      <video src="./resources/videos/excursion.mp4"/>
+      <h2>Your personal travel guide</h2>
+      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+      <img src="./resources/images/camp.jpg"/>
+      <img src="./resources/images/phone.png"/>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p class="download_link"><a href="index.html">Download Excursion (Coming soon!)</a></p>
+      <p id="copyright">&copy;Excursion</p>
   </body>
 </html>
