--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
-    <title></title>
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet"/>
+    <title>Excursion</title>
   </head>
   <body>
+    <!--Head title-->
     <h1>Discover hidden places in the world around you</h1>
-      <p class="download_link"><a href="index.html">Download Excursion (Coming soon!)</a></p>
-      <video src="./resources/videos/excursion.mp4"/>
-      <h2>Your personal travel guide</h2>
-      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <!--Download link props in stylesheet-->
+    <p class="download_link"><a href="index.html">Download Excursion (Coming soon!)</a></p>
+    <!--Video section-->
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type?"video/mp4">
+    </video>
+    <br>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p>
       <img src="./resources/images/camp.jpg"/>
+    </p>
+    <!--Coming soon section-->
+    <p>
       <img src="./resources/images/phone.png"/>
-      <h2>Coming Soon for iPhone and Android</h2>
-      <p class="download_link"><a href="index.html">Download Excursion (Coming soon!)</a></p>
-      <p id="copyright">&copy;Excursion</p>
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p class="download_link"><a href="index.html">Download Excursion (Coming soon!)</a></p>
+    <p id="copyright">&copy; Excursion</p>
   </body>
 </html>
